Update config-wb-domofon-mb.json (#735)
* Update config-wb-domofon-mb.json

Исправил опечатку в переводах

* Update changelog

--- a/templates/config-wb-domofon-mb.json
+++ b/templates/config-wb-domofon-mb.json
@@ -171,7 +171,7 @@
                 "Mute mode": "Беззвучный режим",
                 "Delay before answer": "Пауза перед снятием трубки",
                 "Delay answer": "Время снятой трубки",
-                "Delay open time": "Время импулься открытия",
+                "Delay open time": "Время импульса открытия",
                 "Delay call detect": "Задержка определения звонка",
                 "Ring count": "Длительность звонка",
                 "Uptime": "Время работы",
