add min MCU voltage since startup for mir and mai2cc (#778)
add min MCU voltage for wb-mir_v2, wb-mai2-cc, wb-mrm2-mini-nc, wb-mrm2-mini,

--- a/templates/config-wb-mai2-cc.json
+++ b/templates/config-wb-mai2-cc.json
@@ -107,6 +107,16 @@
                 "group": "hw_info"
             },
             {
+                "name": "Minimum MCU Voltage Since Startup",
+                "reg_type": "input",
+                "address": 119,
+                "scale": 0.001,
+                "type": "value",
+                "units": "V",
+                "enabled": false,
+                "group": "hw_info"
+            },
+            {
                 "name": "Uptime",
                 "reg_type": "input",
                 "address": 104,
@@ -137,6 +147,7 @@
                 "Serial NO": "Серийный номер",
                 "FW Version": "Версия прошивки",
                 "Input Voltage": "Напряжение питания",
+                "Minimum MCU Voltage Since Startup": "Минимальное напряжение питания МК с момента включения",
                 "Uptime": "Время работы с момента включения (с)"
             }
         }
