--- a/templates/config-veda-vf51.json
+++ b/templates/config-veda-vf51.json
@@ -140,7 +140,8 @@
                 "name": "Output Current",
                 "reg_type": "holding",
                 "address": "8450",
-                "type": "current",
+                "type": "value",
+                "units": "A",
                 "format": "u16",
                 "scale": 0.01,
                 "group": "drive_status",
