--- a/templates/config-veda-vf51.json
+++ b/templates/config-veda-vf51.json
@@ -151,7 +151,8 @@
                 "name": "Input Voltage",
                 "reg_type": "holding",
                 "address": "8451",
-                "type": "voltage",
+                "type": "value",
+                "units": "V",
                 "format": "u16",
                 "scale": 0.1,
                 "group": "drive_status",
