--- a/templates/config-veda-vf51.json
+++ b/templates/config-veda-vf51.json
@@ -162,7 +162,8 @@
                 "name": "Output Voltage",
                 "reg_type": "holding",
                 "address": "8452",
-                "type": "voltage",
+                "type": "value",
+                "units": "V",
                 "format": "u16",
                 "scale": 0.1,
                 "group": "drive_status",
