--- a/templates/config-veda-vf51.json
+++ b/templates/config-veda-vf51.json
@@ -296,7 +296,8 @@
                 "name": "Module 1 Temperature",
                 "reg_type": "holding",
                 "address": "8460",
-                "type": "temperature",
+                "type": "value",
+                "units": "deg C",
                 "format": "s16",
                 "scale": 0.1,
                 "group": "drive_status",
