--- a/templates/config-apc-nmc2.json
+++ b/templates/config-apc-nmc2.json
@@ -53,6 +53,7 @@
                 "address": 6,
                 "type": "value",
                 "format": "u16",
+                "units": "min",
                 "group": "device_status",
                 "readonly": true
             },
