--- a/templates/config-wb-mir_v2.json
+++ b/templates/config-wb-mir_v2.json
@@ -14,6 +14,7 @@
         "response_timeout_ms": 1,
         "frame_timeout_ms": 12,
         "enable_wb_continuous_read": true,
+        "min_request_interval": 100,
 
         "groups": [
             {
