--- a/templates/config-veda-vf51.json
+++ b/templates/config-veda-vf51.json
@@ -308,7 +308,8 @@
                 "name": "Module 2 Temperature",
                 "reg_type": "holding",
                 "address": "8461",
-                "type": "temperature",
+                "type": "value",
+                "units": "deg C",
                 "format": "s16",
                 "scale": 0.1,
                 "group": "drive_status",
