--- a/templates/config-veda-vf51.json
+++ b/templates/config-veda-vf51.json
@@ -319,7 +319,8 @@
                 "name": "AI1 Voltage",
                 "reg_type": "holding",
                 "address": "8464",
-                "type": "voltage",
+                "type": "value",
+                "units": "V",
                 "format": "u16",
                 "scale": 0.001,
                 "group": "drive_status",
