--- a/templates/config-apc-nmc2.json
+++ b/templates/config-apc-nmc2.json
@@ -235,7 +235,7 @@
                 "readonly": true
             },
             {
-                "name": "Work",
+                "name": "UPS Turning On",
                 "reg_type": "holding",
                 "address": "0:0:1",
                 "type": "switch",
@@ -339,7 +339,7 @@
                 "Shutdown Delay": "Задержка выключения",
                 "Low Battery Signal": "Сигнал низкого заряда",
                 "Start Delay": "Задержка включения",
-                "Work": "В работе",
+                "UPS Turning On": "ИБП включен",
                 "Mains Power": "Питание от сети",
                 "Powered By Battery": "Питание от АКБ",
                 "Overload": "Перегрузка",
