--- a/templates/config-onokom-air-gr-1-mb-b.json
+++ b/templates/config-onokom-air-gr-1-mb-b.json
@@ -84,7 +84,7 @@
                 "format": "s16", 
                 "type": "value",
                 "enabled": true,
-                "units": "°C"
+                "units": "deg C"
             },
             {   
                 "name": "Outdoor air temperature",
@@ -96,7 +96,7 @@
                 "type": "value",
                 "enabled": false,
                 "readonly": true,
-                "units": "°C"
+                "units": "deg C"
             },
             {   
                 "name": "Target temperature",
@@ -105,7 +105,7 @@
                 "address": 5, 
                 "scale": 0.01,
                 "type": "range",
-                "units": "°C",
+                "units": "deg C",
                 "format": "s16", 
                 "enabled": true,
                 "min": 18,
