--- a/templates/config-ptex.json
+++ b/templates/config-ptex.json
@@ -111,7 +111,7 @@
 				"reg_type": "holding",
 				"address": 1021,
 				"type": "value",
-				"units": "liters",
+				"units": "m^3",
 				"format": "u16",
 				"group": "parameters"
 			},
