--- a/templates/config-map3h-fw2.json
+++ b/templates/config-map3h-fw2.json
@@ -70,6 +70,7 @@
                 "enum": [0, 1],
                 "default": 0,
                 "enum_titles": ["No", "Yes"],
+                "description": "Firmware v2.10.0 or newer is required",
                 "group": "l1",
                 "order": 3
             },
@@ -100,6 +101,7 @@
                 "enum": [0, 1],
                 "default": 0,
                 "enum_titles": ["No", "Yes"],
+                "description": "Firmware v2.10.0 or newer is required",
                 "group": "l2",
                 "order": 3
             },
@@ -130,6 +132,7 @@
                 "enum": [0, 1],
                 "default": 0,
                 "enum_titles": ["No", "Yes"],
+                "description": "Firmware v2.10.0 or newer is required",
                 "group": "l3",
                 "order": 3
             }
@@ -1175,7 +1178,8 @@
                 "Frequency": "Частота",
                 "Serial": "Серийный номер",
                 "Supply Voltage": "Напряжение 5 В",
-                "Uptime": "Время работы с момента включения (с)"
+                "Uptime": "Время работы с момента включения (с)",
+                "Firmware v2.10.0 or newer is required": "Для прошивок v2.10.0 и новее"
             }
         }
     }
