--- a/templates/config-t13-frequency-v2.json
+++ b/templates/config-t13-frequency-v2.json
@@ -85,7 +85,8 @@
                 "reg_type": "holding",
                 "address": 8,
                 "scale": 0.1,
-                "type": "voltage",
+                "type": "value",
+                "units": "V",
                 "readonly": true,
                 "enabled": false,
                 "group": "debug"
