--- a/templates/config-t13-frequency-v2.json
+++ b/templates/config-t13-frequency-v2.json
@@ -97,7 +97,8 @@
                 "reg_type": "holding",
                 "address": 9,
                 "scale": 0.01,
-                "type": "current",
+                "type": "value",
+                "units": "A",
                 "readonly": true,
                 "enabled": false,
                 "group": "debug"
