--- a/templates/config-t13-frequency-v2.json
+++ b/templates/config-t13-frequency-v2.json
@@ -108,7 +108,8 @@
                 "id": "radiator_temperature",
                 "reg_type": "holding",
                 "address": 10,
-                "type": "temperature",
+                "type": "value",
+                "units": "deg C",
                 "readonly": true,
                 "format": "s16",
                 "scale": 1,
